@@ -4,6 +4,7 @@
 - Don't abort when connecting if the first connection fails. This is important
   on e.g. Windows 7, where IPV6 is offered as the first choice but may not be
   available.
+- Deal with long logging messages properly (bug #785882).
 
 0.10.1 - 20110512
 =================
